kubernetes/apps/media/plex/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex
  namespace: media
  labels:
    app.kubernetes.io/name: plex
    app.kubernetes.io/instance: plex
spec:
  parentRefs:
    - name: external
      namespace: network
      kind: Gateway
  hostnames:
    - plex.${SECRET_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: plex
          port: 32400
      timeouts:
        request: 1h
        backendRequest: 1h
